samples/_failures_safe/1761072040_5cb8a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_736d23f8.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_736d23f8.c:178:9: error: expected declaration or statement at end of input
  178 |         default:
      |         ^~~~~~~
./samples/SAFE/__tmp_736d23f8.c:178:9: error: expected declaration or statement at end of input
